# Cleanlab_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_DETAILED.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 08_regression_cleanlearning_bike_sharing.ipynb  09_multiannotator_active_learning_movielens_100k.ipynb  12_anomaly_detection_cleanlab.ipynb
src/cleanlab_demo/: cli.py  metrics.py
src/cleanlab_demo/ai/: report.py
src/cleanlab_demo/core/: __init__.py  constants.py  exceptions.py  types.py
src/cleanlab_demo/data/: __init__.py  hub.py
src/cleanlab_demo/data/providers/: __init__.py  anomaly.py  multiannotator.py  multiclass.py  multilabel.py  regression.py  token.py  vision.py
src/cleanlab_demo/experiments/: __init__.py  runner.py  sweep.py
src/cleanlab_demo/features/: __init__.py  preprocess.py
src/cleanlab_demo/models/: __init__.py  factory.py
src/cleanlab_demo/tasks/: __init__.py  base.py
src/cleanlab_demo/tasks/anomaly/: __init__.py  provider.py  schemas.py  strategies.py  task.py
src/cleanlab_demo/tasks/multiannotator/: __init__.py  provider.py  schemas.py
src/cleanlab_demo/tasks/multiclass/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/multilabel/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/outlier/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/regression/: __init__.py  provider.py  schemas.py  task.py
src/cleanlab_demo/tasks/token/: __init__.py  cv.py  featurization.py  metrics.py  model.py  noise.py  provider.py  schemas.py
src/cleanlab_demo/tasks/vision/: __init__.py  provider.py  schemas.py  task.py  utils.py
src/cleanlab_demo/ui/: streamlit_app.py
src/cleanlab_demo/utils/: __init__.py  download.py  ml.py
tests/: __init__.py  test_core.py  test_utils_ml.py
tests/test_tasks/: __init__.py  conftest.py  test_anomaly.py  test_base.py  test_multiclass.py  test_multilabel.py  test_outlier.py
